; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_memcontrol.c_mem_cgroup_uncharge_cache_page.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_memcontrol.c_mem_cgroup_uncharge_cache_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@MEM_CGROUP_CHARGE_TYPE_CACHE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mem_cgroup_uncharge_cache_page(%struct.page* %0) #0 {
  %2 = alloca %struct.page*, align 8
  store %struct.page* %0, %struct.page** %2, align 8
  %3 = load %struct.page*, %struct.page** %2, align 8
  %4 = call i32 @page_mapped(%struct.page* %3)
  %5 = call i32 @VM_BUG_ON(i32 %4)
  %6 = load %struct.page*, %struct.page** %2, align 8
  %7 = getelementptr inbounds %struct.page, %struct.page* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @VM_BUG_ON(i32 %8)
  %10 = load %struct.page*, %struct.page** %2, align 8
  %11 = load i32, i32* @MEM_CGROUP_CHARGE_TYPE_CACHE, align 4
  %12 = call i32 @__mem_cgroup_uncharge_common(%struct.page* %10, i32 %11)
  ret void
}

declare dso_local i32 @VM_BUG_ON(i32) #1

declare dso_local i32 @page_mapped(%struct.page*) #1

declare dso_local i32 @__mem_cgroup_uncharge_common(%struct.page*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
